<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_course_title"
        style="@style/RecyclerviewTitleStyle"
        android:text="@string/label_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_course_instructor"
        style="@style/RecyclerviewListItemStyle"
        android:text="@string/label_instructor_name"
        app:layout_constraintTop_toBottomOf="@id/text_course_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_course_status"
        style="@style/RecyclerviewListItemStyle"
        android:text="@string/label_status"
        app:layout_constraintTop_toBottomOf="@id/text_course_instructor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>